examples/type_system/failing/210_stage_all_errors_flag.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// Same scenario as 150.
// Verify `--all-errors` via `flux run` to expose downstream diagnostics hidden in default mode.

import Stage150Type

fn main() -> Unit {
    let broken = "unterminated
}
